--- a/QSTest/res/drawable/ic_qs_circle.xml
+++ b/QSTest/res/drawable/ic_qs_circle.xml
@@ -18,6 +18,6 @@
 
     <path
         android:fillColor="#00ffffff"
-        android:pathData="M50,0A50,50,0,0 1 100,50 L100,85 A15,15,0,0 1 85,100 L50,100 A50,50,0,0 1 50,0z" />
+        android:pathData="1" />
 </vector>
 
